--- a/ZeiterfassungPierburg/Views/NeueZeiterfassung/CreateMEBA.cshtml
+++ b/ZeiterfassungPierburg/Views/NeueZeiterfassung/CreateMEBA.cshtml
@@ -8,7 +8,7 @@
         <div class="box box-info">
 
             <div class="box-body">
-                <h2>Neue Zeiterfassung</h2>
+                <h2>Neue Zeiterfassung - MEBA</h2>
 
                 <div class="table-responsive">
                     <table class="table no-margin">
