--- a/ZeiterfassungPierburg/Views/Fertigungsteil/Index.cshtml
+++ b/ZeiterfassungPierburg/Views/Fertigungsteil/Index.cshtml
@@ -40,7 +40,7 @@
 
                     </tbody>
                 </table>
-                <h4>@ViewBag.MitarbeiterMessage</h4>
+                <h4>@ViewBag.FertigungsteilMessage</h4>
                 @Html.ActionLink("Hinzufügen", "Create", null, new { @class = "pull-left btn btn-default", @type = "button", })
             </div>
         </div>
