--- a/ZeiterfassungPierburg/Views/Produktionsanlage/Edit.cshtml
+++ b/ZeiterfassungPierburg/Views/Produktionsanlage/Edit.cshtml
@@ -43,7 +43,8 @@
                             </div>
                         </div>
                         <div class="form-group">
-                            @Html.LabelFor(model => model.IstEineMaschine, htmlAttributes: new { @class = "control-label col-md-2" })
+                            @Html.LabelFor(model => model.IstEine
+                            , htmlAttributes: new { @class = "control-label col-md-2" })
                             <div class="col-md-8">
                                 @Html.CheckBoxFor(model => model.IstEineMaschine, new { htmlAttributes = new { @class = "form-control" } })
                                 @Html.ValidationMessageFor(model => model.IstEineMaschine, "", new { @class = "text-danger" })
