--- a/ZeiterfassungPierburg/Views/Produktionsanlage/Index.cshtml
+++ b/ZeiterfassungPierburg/Views/Produktionsanlage/Index.cshtml
@@ -50,7 +50,7 @@
 
                                 <td>
                                     @Html.ActionLink("Edit", "Edit", new { id = item.ID }) |
-                                    @Html.ActionLink("Delete", "Delete", new { id = item.ID }, new { onclick = "return confirm('Are sure wants to delete?');" })
+                                    @Html.ActionLink("Delete", "Delete", new { id = item.ID }, new { onclick = "return confirm('Bist du sicher?');" })
                                 </td>
                             </tr>
                         }
