correct DELETE operation in MitarbeiterInSchicht

--- a/ZeiterfassungPierburg/Views/MitarbeiterInSchicht/IndexMEBA.cshtml
+++ b/ZeiterfassungPierburg/Views/MitarbeiterInSchicht/IndexMEBA.cshtml
@@ -113,7 +113,7 @@
                                 </td>
                                 <td>
                                     <!-- @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |-->
-                                    @Html.ActionLink("Delete", "Delete", new { id = item.ID })
+                                    @Html.ActionLink("Löschen", "Delete", new { id = item.ID })
                                 </td>
                             </tr>
                         }
