--- a/ZeiterfassungPierburg/Views/MitarbeiterInSchicht/Index.cshtml
+++ b/ZeiterfassungPierburg/Views/MitarbeiterInSchicht/Index.cshtml
@@ -73,49 +73,49 @@
                     <tbody>
                         @foreach (var item in Model)
                         {
-                            <tr>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.Datum)
-                                </td>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.Art)
-                                </td>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.Anlage)
-                                </td>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.Name)
-                                </td>
+                        <tr>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.Datum)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.Art)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.Anlage)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.Name)
+                            </td>
 
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.Personalnummer)
-                                </td>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.Kostenstelle)
-                                </td>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.SAPAPNr)
-                                </td>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.ZeichenNr)
-                                </td>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.Stück)
-                                </td>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.DirStunden)
-                                </td>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.InDirStunden)
-                                </td>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.Bemerkung)
-                                </td>
-                                <td>
-                                    <!-- @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |-->
-                                    @Html.ActionLink("Delete", "Delete", new { id = item.ID })
-                                </td>
-                            </tr>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.Personalnummer)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.Kostenstelle)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.SAPAPNr)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.ZeichenNr)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.Stück)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.DirStunden)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.InDirStunden)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.Bemerkung)
+                            </td>
+                            <td>
+                                <!-- @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |-->
+                                @Html.ActionLink("Löschen", "Delete", new { item.ID })
+                            </td>
+                        </tr>
                         }
                     </tbody>
                 </table>
@@ -216,6 +216,7 @@
 
             var table = $('#myTable').DataTable(
                 {
+                    dom: 'Bfrtip',
                     dom: 'Bfrtip',
                     buttons: [
                         'copy', 'csv', 'excel', 'pdf', 'print'
