add validation for Create(MEBA)
small dashboard and layout changes

--- a/ZeiterfassungPierburg/Views/Home/Index.cshtml
+++ b/ZeiterfassungPierburg/Views/Home/Index.cshtml
@@ -96,7 +96,85 @@
         </div>
         <!-- ./col -->
 
-        
+        <div class="col-lg-3 col-xs-6">
+            <div class="box-footer text-black">
+                <h4>Produktivität</h4>
+
+                <div class="row">
+                    <div class="col-sm-12">
+                        <!-- Progress bars -->
+                        <div class="clearfix">
+                            <span class="pull-left">Band 101</span>
+                            <small class="pull-right">90%</small>
+                        </div>
+                        <div class="progress xs">
+                            <div class="progress-bar progress-bar-green" style="width: 90%;"></div>
+                        </div>
+
+                        <div class="clearfix">
+                            <span class="pull-left">Band 102</span>
+                            <small class="pull-right">70%</small>
+                        </div>
+                        <div class="progress xs">
+                            <div class="progress-bar progress-bar-green" style="width: 70%;"></div>
+                        </div>
+
+                        <div class="clearfix">
+                            <span class="pull-left">Band 103</span>
+                            <small class="pull-right">60%</small>
+                        </div>
+                        <div class="progress xs">
+                            <div class="progress-bar progress-bar-green" style="width: 60%;"></div>
+                        </div>
+
+                        <div class="clearfix">
+                            <span class="pull-left">Band 104</span>
+                            <small class="pull-right">40%</small>
+                        </div>
+                        <div class="progress xs">
+                            <div class="progress-bar progress-bar-green" style="width: 40%;"></div>
+                        </div>
+
+                        <div class="clearfix">
+                            <span class="pull-left">Band 203</span>
+                            <small class="pull-right">45%</small>
+                        </div>
+                        <div class="progress xs">
+                            <div class="progress-bar progress-bar-green" style="width: 45%;"></div>
+                        </div>
+
+                        <div class="clearfix">
+                            <span class="pull-left">Band 104/105</span>
+                            <small class="pull-right">49%</small>
+                        </div>
+                        <div class="progress xs">
+                            <div class="progress-bar progress-bar-green" style="width: 49%;"></div>
+                        </div>
+
+                        <div class="clearfix">
+                            <span class="pull-left">Band 108</span>
+                            <small class="pull-right">89%</small>
+                        </div>
+                        <div class="progress xs">
+                            <div class="progress-bar progress-bar-green" style="width: 89%;"></div>
+                        </div>
+
+                        <div class="clearfix">
+                            <span class="pull-left">Band 201</span>
+                            <small class="pull-right">103%</small>
+                        </div>
+                        <div class="progress xs">
+                            <div class="progress-bar progress-bar-green" style="width: 103%;"></div>
+                        </div>
+                    </div>
+
+
+
+                    <!-- /.col -->
+                </div>
+            </div>
+
+        </div>
         
 
     </div>
