--- a/ZeiterfassungPierburg/Views/MitarbeiterInSchicht/IndexMEBA.cshtml
+++ b/ZeiterfassungPierburg/Views/MitarbeiterInSchicht/IndexMEBA.cshtml
@@ -112,8 +112,9 @@
                                     @Html.DisplayFor(modelItem => item.Bemerkung)
                                 </td>
                                 <td>
-                                    <!-- @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |-->
-                                    @Html.ActionLink("Löschen", "Delete", new { id = item.ID })
+                                    <!-- @Html.ActionLink("Bearbeiten", "Edit", new { /* id=item.PrimaryKey */ }) |-->
+                                    @Html.ActionLink("Löschen", "Delete", new { id = item.ID }, new { onclick = "return confirm('Bist du sicher?');" })
+
                                 </td>
                             </tr>
                         }
