add MVC TeileInProduktionsanlagen

--- a/ZeiterfassungPierburg/Views/Shared/_Layout.cshtml
+++ b/ZeiterfassungPierburg/Views/Shared/_Layout.cshtml
@@ -79,6 +79,8 @@
                         <li>@Html.ActionLink("Produktionsanlagen", "Index", "Produktionsanlage")</li>
                         <li>@Html.ActionLink("Fertigungsteile", "Index", "Fertigungsteil")</li>
                         <li>@Html.ActionLink("Mitarbeiter", "Index", "Mitarbeiter")</li>
+                        <li>@Html.ActionLink("Teile bei Anlagen", "Index", "TeileInProduktionsanlage")</li>
+
                     </ul>
     <!-- /.sidebar-menu -->
 </section>
